--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.rascal.lx03b.MainActivity">
+    tools:context="com.example.rascal.lx03c.MainActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:background="?attr/colorPrimary"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.Toolbar>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
@@ -13,21 +21,4 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/viewPager"
-        android:visibility="invisible"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </android.support.v4.view.ViewPager>
-    <TextView
-        android:id="@+id/tv_count"
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:textSize="40sp"
-        android:visibility="invisible"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="1/20" />
-
-</RelativeLayout>
+</LinearLayout>
