--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -70,10 +70,13 @@
 
     </android.support.design.widget.TabLayout>
 
-    <TextView
-        android:id="@+id/tv_content"
+    <android.support.v4.view.ViewPager
+        android:layout_marginTop="20dp"
+        android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content">
+
+    </android.support.v4.view.ViewPager>
 
 
 </LinearLayout>
